# routinely

./: .gitignore  CMakeLists.txt  Dependencies.cmake  Dockerfile  ProjectOptions.cmake  README.md  TODO.md  build.sh  firebase.json  index.html  input.json  input.plan.json  input.practice_log.json  log.csv  main.cpp  main.js  migrate_to_firestore.py  plan.json  plan.md  routine_builder.cpp  routine_builder.hpp  routinely.hpp  routinely.py  test_routinely.py  topics.csv  vcpkg.json  wasm_bindings.cpp
archive/: plan-1.md
client/: .firebaserc  .gitignore  firebase.json  main.js
cmake/: CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp  routinely.cpp  routinely.hpp
wasm/: CMakeLists.txt  Makefile  a.out  build.sh  builder.js  builder.wasm  main.cpp  routinely.cpp
wasm/cmake/: Cache.cmake  Sanitizers.cmake  StandardProjectSettings.cmake
wasm/src/: main.cpp
